--- a/app/src/main/res/layout/activity_change_pass.xml
+++ b/app/src/main/res/layout/activity_change_pass.xml
@@ -7,14 +7,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context="com.example.kazt.basicchat.Login">
+    tools:context="com.example.kazt.basicchat.ChangePass">
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp">
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/tie_username"
-            android:hint="Username"
+            android:id="@+id/tie_old_username"
+            android:hint="Old Username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
@@ -22,39 +22,45 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="10dp">
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/tie_pass"
-            android:hint="Password"
+            android:id="@+id/tie_old_pass"
+            android:hint="Old Password"
             android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
 
-    <Button
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primary_light"
-        android:textColor="@color/secondary_text"
-        android:text="Login"
-        android:id="@+id/btn_login"
-        android:layout_marginTop="70dp"/>
+        android:layout_marginTop="30dp">
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/tie_new_username"
+            android:hint="New Username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/tie_new_pass"
+            android:hint="New Password"
+            android:inputType="textPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </android.support.design.widget.TextInputLayout>
+
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/primary"
         android:textColor="@color/icons"
-        android:text="Set PassWord"
-        android:id="@+id/btn_setpass"
-        android:layout_marginTop="20dp"/>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primary_dark"
-        android:textColor="@color/icons"
-        android:text="Chang PassWord and username"
-        android:id="@+id/btn_changepass"
-        android:layout_marginTop="20dp"/>
+        android:text="Set New PassWord"
+        android:id="@+id/btn_set_new_pass"
+        android:layout_marginTop="40dp"/>
 </LinearLayout>
