--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -19,7 +19,8 @@
             android:text="username"
             android:textStyle="italic"
             android:textSize="15sp"
-            android:id="@+id/tv_username"/>
+            android:id="@+id/tv_username"
+            android:textColor="@color/primary_dark"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
